--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">AndroidServiceExample</string>
     <string name="button_response">Timing!</string>
     <string name="button_text">What is the secret of comedy?</string>
+    <string name="start_service">Start Service</string>
+    <string name="bind_service">Bind Service</string>
 </resources>
